deploy/base/processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  namespace: fileprocessing-dev
  labels:
    app: processor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
      - name: processor
        image: achodak/fileprocessing-processor:latest  # This will be updated by CI
        volumeMounts:
        - name: shared-data
          mountPath: /mnt/nfs_clientshare
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: nfs-pvc-new
