deploy/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: achodak/fileprocessing-api:latest
        command: ["/bin/sh", "-c"]
        args:
          - "export DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:5432/$POSTGRES_DB?host=$POSTGRES_HOST && exec uvicorn app:app --host 0.0.0.0 --port 8000"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-data
          mountPath: /app/data
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: dockerhub-secret
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: nfs-pvc-new
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - port: 80  # External service port
    targetPort: 8000  # Container port
  type: ClusterIP
