deploy/base/notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  namespace: fileprocessing-dev
  labels:
    app: notifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      imagePullSecrets:
      - name: dockerhub-credentials
      containers:
      - name: notifier
        image: achodak/fileprocessing-notifier:latest
        # Using the CMD in Dockerfile: ["python", "notifier.py"]
        resources:
          limits:
            cpu: "300m"
            memory: "384Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
spec:
  selector:
    app: notifier
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
